--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -424,7 +424,7 @@ a.city-title:hover {
 		text-transform: uppercase;
 		font-family: $sans-font;
 		letter-spacing: $h1-letter-sp;
-		font-size: .75em;
+		font-size: $h1-font-size;
 		color: $blackish !important;
 	}
 
@@ -442,6 +442,8 @@ a.city-title:hover {
 	.designer-desc {
 		padding: 2em 0 0;
 		font-family: $serif-font;
+		line-height: 2em;
+		font-size: $h1-font-size;
 	}
 
 	.left-col {
