--- a/app/views/nashville/designer.html.erb
+++ b/app/views/nashville/designer.html.erb
@@ -21,12 +21,12 @@
 
 					Dress.where(designer_id: @designer, location: @city).each_with_index do |main_img|
 						@dresses.push(main_img)
-						DressImage.where(dress_id: main_img).limit(4).each_with_index do |additional_img|
+						DressImage.where(dress_id: main_img).limit(4).each do |additional_img|
 							@dresses.push(additional_img)
 						end
 					end
 
-				  @dresses_left, @dresses_right = @dresses.in_groups(2)
+				  @dresses_left, @dresses_right = @dresses.in_groups(2, false)
 				  @dresses_right.pop
 
 				%>
