--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -406,11 +406,11 @@ a.city-title:hover {
 	.designer-img {
 		margin: 30px 0;
 		display: inline-block;
-		max-width: 100%;
+		width: 150%;
   	height: auto;
   	position:  absolute;
 		top: 0;
-		left: 0;
+		left: -20%;
 		bottom: 0;
 		right: 0;
 	}
