--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -409,8 +409,8 @@ a.city-title:hover {
 		width: 150%;
   	height: auto;
   	position:  absolute;
-		top: 0;
-		left: -20%;
+		top: -10%;
+		left: -30%;
 		bottom: 0;
 		right: 0;
 	}
