--- a/app/views/dresses/_form.html.erb
+++ b/app/views/dresses/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.label :designer_id %><br>
     <%
       @dress_id = @dress.designer ? @dress.designer.id : ''
-      @designer_collection = Designer.all.order('updated_at ASC').collect {|s| [ s.name, s.id ] }
+      @designer_collection = Designer.all.order('updated_at DESC').collect {|s| [ s.name, s.id ] }
     %>
     <%=  f.select :designer_id, options_for_select(@designer_collection, {:selected => @dress_id, prompt: 'Select Designer'}) %>
   </div>
