--- a/app/views/nashville/designer.html.erb
+++ b/app/views/nashville/designer.html.erb
@@ -8,7 +8,7 @@
 
 				<div class="col-xs-12">
 					<h4 class="pull-left"><%= @designer.name %></h4>
-					<h4 class="pull-right"><%= @designer.price %></h4>
+					<h4 class="pull-right price"><%= @designer.price %></h4>
 				</div>
 				<div class="col-xs-12">
 					<p class="designer-desc"><%= @designer.description %></p>
