--- a/app/views/dresses/_form.html.erb
+++ b/app/views/dresses/_form.html.erb
@@ -11,51 +11,100 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :designer_id %><br>
-    <%
-      @dress_id = @dress.designer ? @dress.designer.id : ''
-      @designer_collection = Designer.all.order('updated_at DESC').collect {|s| [ s.name, s.id ] }
-    %>
-    <%=  f.select :designer_id, options_for_select(@designer_collection, {:selected => @dress_id, prompt: 'Select Designer'}) %>
-  </div>
-  <div class="field">
-    <%= f.label :location %><br>
-    <%= f.select :location, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @dress.location, prompt: 'Select Location'}) %>
+  <fieldset class="form-group well">
+    <div class="form-group col-sm-4">
+      <div class="col-sm-12">
+        <%= f.label :designer_id %><br>
+        <%
+          @dress_id = @dress.designer ? @dress.designer.id : ''
+          @designer_collection = Designer.all.order('updated_at DESC').collect {|s| [ s.name, s.id ] }
+        %>
+        <%=  f.select :designer_id, options_for_select(@designer_collection, {:selected => @dress_id, prompt: 'Select Designer'}) %>
+        <br />
+        <br />
+      </div>
 
-  </div>
+      <div class="col-sm-12">
+        <%= f.label :location %><br>
+        <%= f.select :location, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @dress.location, prompt: 'Select Location'}) %>
+      </div>
+    </div>
 
-  <%= image_tag(@dress.main_image.url, :class => "img-thumbnail") %>
+    <div class="form-group col-sm-8">
+      <div class="col-sm-3">
+        <%= image_tag(@dress.main_image.url, :class => "img-thumbnail") %>
+      </div>
 
-  <div class="field">
-    <%= f.label :main_image %><br>
-    <%= f.file_field :main_image %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </div>
-  <div class="field">
-    <%= f.label :style %><br>
-    <%= f.text_field :style %>
-  </div>
-  <div class="field">
-    <%= f.label :garment_type %><br>
-    <%= f.text_field :garment_type %>
-  </div>
-  <div class="field">
-    <%= f.label :tag %><br>
-    <%= f.text_field :tag %>
-  </div>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :collection %><br>
-    <%= f.text_field :collection %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+      <div class="file col-sm-9">
+        <%= f.label :main_image %><br>
+        <%= f.file_field :main_image, :class => 'file file-custom' %>
+      </div>
+    </div>
+  </fieldset>
+
+  <fieldset class="form-group well">
+    <div class="form-group  col-sm-4 text-center">
+      <%= f.label :price %><br>
+      <%= f.text_field :price %>
+    </div>
+    <div class="form-group col-sm-4 text-center">
+      <%= f.label :style %><br>
+      <%= f.text_field :style %>
+    </div>
+    <div class="form-group col-sm-4 text-center">
+      <%= f.label :garment_type %><br>
+      <%= f.text_field :garment_type %>
+    </div>
+  </fieldset>
+
+  <fieldset class="form-group well">
+    <div class="form-group  col-sm-4 text-center">
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+    </div>
+    <div class="form-group col-sm-4 text-center">
+      <%= f.label :tag %><br>
+      <%= f.text_field :tag %>
+    </div>
+    <div class="form-group col-sm-4 text-center">
+      <%= f.label :collection %><br>
+      <%= f.text_field :collection %>    </div>
+  </fieldset>
+
+  <h2>Dress Images</h2>
+  <p>
+  <%= f.fields_for(:dress_images) do |dress_images_form| %>
+    <%= dress_images_form.label :name %>
+    <%= dress_images_form.text_field :name %><br>
+    <%= dress_images_form.label :collection %>
+    <%= dress_images_form.datetime_select :collection %><br>
+  <% end %>
+
+  <p>
+
+  <fieldset class="form-group text-center">
+    <%= f.submit :class => 'btn btn-default' %>
+  </fieldset>
+
+  <p><hr /></p>
+
+  <% if @dress_images.present? %>
+    <div class="">
+      <div class="panel panel-default">
+      <div class="panel-heading">Additional images for <%= @dress.name %></div>
+        <ol class="list-group">
+
+            <% @dress_images.each do |dress_img| %>
+              <li class="list-group-item"><%= link_to image_tag(dress_img.image.url, :class => "img-thumbnail"), edit_dress_image_path(dress_img) %></li>
+            <% end %>
+
+        </ol>
+      </div>
+    <% end %>
+
+    <p class="text-center">
+    <%= link_to new_dress_image_path(:dress_id => @dress.id), class: "btn btn-default" do %>
+        <i class="glyphicon glyphicon-plus"></i>&nbsp;Add New Dress Image
+    <% end %>
+    </p>
 <% end %>
