--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -11,38 +11,119 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_area :price %>
-  </div>
-    
-  <%= image_tag(@designer.main_image.url, :class => "img-thumbnail") %>
 
-  <div class="field">
-    <%= f.label :main_image %><br>
-    <%= f.file_field :main_image %>
+  <fieldset class="form-group">
+    <label for="designer_name" class="col-sm-2 control-label">Name</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" name="designer[name]
+        id="designer_name" value="<%= @designer.name %>" />
+    </div>
+  </fieldset>
+
+  <fieldset class="form-group">
+    <label for="designer_description" class="col-sm-2 control-label">Description</label>
+    <div class="col-sm-10">
+      <textarea class="form-control" name="designer[description]"
+        id="designer_description" cols="80" rows="2" value="<%= @designer.description %>"> </textarea>
+    </div>
+  </fieldset>
+
+  <fieldset class="form-group">
+    <label for="designer_price" class="col-sm-2 control-label">Price</label>
+    <div class="col-sm-4">
+      <div class="input-group">
+        <div class="input-group-addon">$</div>
+        <input type="text" class="form-control" name="designer[price]
+          id="designer_price" value="<%= @designer.price %>" >
+      </div>
+    </div>
+  </fieldset>
+
+ <% if false %>
+  <fieldset class="form-group col-sm-4">
+    <label for="designer_location1 class="col-sm-2 control-label">Location 1</label>
+    <div class="col-sm-10">
+      <input type="select" class="form-control" name="designer[location1]
+        id="designer_location1" value="<%= @designer.location1 %>" />
+    </div>
+  </fieldset>
+  <fieldset class="form-group col-sm-4">
+    <label for="designer_location2 class="col-sm-2 control-label">Location 2</label>
+    <div class="col-sm-10">
+      <input type="text_area" class="form-control" name="designer[location2]
+        id="designer_location2" value="<%= @designer.location2 %>" />
+    </div>
+  </fieldset>
+  <fieldset class="form-group col-sm-4">
+    <label for="designer_location3" class="col-sm-2 control-label">Location 3</label>
+    <div class="col-sm-10">
+      <input type="text_area" class="form-control" name="designer[location3]
+        id="designer_location3" value="<%= @designer.location3 %>" />
+    </div>
+  </fieldset>
+  <% end %>
+
+  <fieldset class="form-group">
+    <div class="col-sm-2">
+      <%= image_tag(@designer.main_image.url, :class => "img-thumbnail") %>
+    </div>
+
+    <div class="file col-sm-4">
+      <%= f.label :main_image %><br>
+      <%= f.file_field :main_image, :class => 'file file-custom' %>
+    </div>
+
+  </fieldset>
+
+  <fieldset class="form-group well">
+    <div class="form-group col-sm-4 text-center">
+      <%= f.label :location1 %><br>
+      <%= f.select :location1, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @designer.location1}), {include_blank: true} %>
+    </div>
+    <div class="form-group col-sm-4 text-center">
+      <%= f.label :location2 %><br>
+      <%= f.select :location2, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @designer.location2}), {include_blank: true} %>
+    </div>
+    <div class="form-group  col-sm-4 text-center">
+      <%= f.label :location3 %><br>
+      <%= f.select :location3, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @designer.location3}), {include_blank: true} %>
+    </div>
+  </fieldset>
+
+
+
+  <% if false %>
+    <div class="actions">
+      <%= f.submit :class => 'btn btn-default' %>
+    </div>
+  <% end %>
+
+  <fieldset class="form-group text-center">
+    <%= f.submit :class => 'btn btn-default' %>
+  </fieldset>
+
+  <p><hr /></p>
+
+  <% if @dresses.present? %>
+    <div class="">
+      <div class="panel panel-default">
+      <div class="panel-heading">Dresses by <%= @designer.name %></div>
+        <ol class="list-group">
+
+            <% @dresses.each do |dress| %>
+              <li class="list-group-item"><%= link_to image_tag(dress.main_image.url, :class => "img-thumbnail"), edit_dress_path(dress) %> <%= link_to dress.name, edit_dress_path(dress) %></li>
+            <% end %>
+
+        </ol>
+      </div>
+    <% end %>
+
+    <p class="text-center">
+    <%= link_to new_dress_path(:designer_id => @designer.id), class: "btn btn-default" do %>
+        <i class="glyphicon glyphicon-plus"></i>&nbsp;Add New Dress
+    <% end %>
+    </p>
   </div>
-  <div class="field">
-    <%= f.label :location1 %><br>
-    <%= f.select :location1, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @designer.location1}), {include_blank: true} %>
-  </div>
-  <div class="field">
-    <%= f.label :location2 %><br>
-    <%= f.select :location2, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @designer.location2}), {include_blank: true} %>
-  </div>
-  <div class="field">
-    <%= f.label :location3 %><br>
-    <%= f.select :location3, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @designer.location3}), {include_blank: true} %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+
 <% end %>
