--- a/app/views/dress_images/new.html.erb
+++ b/app/views/dress_images/new.html.erb
@@ -3,5 +3,9 @@
 
 	<%= render 'form' %>
 
-	<%= link_to 'Back', dress_images_path %>
+	<p>
+		<%= link_to dress_images_path, class: "" do %>
+			<i class="glyphicon glyphicon-hand-left"></i> Back
+		<% end %>
+	</p>
 </div>
