--- a/app/views/dresses/edit.html.erb
+++ b/app/views/dresses/edit.html.erb
@@ -4,7 +4,13 @@
 
 	<%= render 'form' %>
 
-	<%= link_to 'Show', @dress %> |
-	<%= link_to 'Back', dresses_path %>
-	
+	<p>
+		<%= link_to dresses_path, class: "" do %>
+			<i class="glyphicon glyphicon-hand-left"></i> Back
+		<% end %> &nbsp;|&nbsp;
+		<%= link_to @dress do %>
+			Show <i class="glyphicon glyphicon-star"></i>
+		<% end %>
+	</p>
+
 </div>
