--- a/app/views/dresses/new.html.erb
+++ b/app/views/dresses/new.html.erb
@@ -4,5 +4,9 @@
 
 	<%= render 'form' %>
 
-	<%= link_to 'Back', dresses_path %>
+	<p>
+		<%= link_to dresses_path do %>
+			<i class="glyphicon glyphicon-hand-left"></i> Back
+		<% end %>
+	</p>
 </div>
