--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -4,6 +4,9 @@
 
 	<%= render 'form' %>
 
-	<%= link_to 'Back', stores_path %>
-	
+	<p>
+		<%= link_to stores_path do %>
+			<i class="glyphicon glyphicon-hand-left"></i> Back
+		<% end %>
+	</p>
 </div>
