--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -62,7 +62,14 @@
     <%= image_tag(@store.the_experience_image.url, :class => "img-thumbnail") %>
   </p>
 
-  <%= link_to 'Edit', edit_store_path(@store) %> |
-  <%= link_to 'Back', stores_path %>
-  
+  <br /><br />
+  <p>
+		<%= link_to stores_path, class: "" do %>
+			<i class="glyphicon glyphicon-hand-left"></i> Back
+		<% end %> &nbsp;|&nbsp;
+    <%= link_to edit_store_path(@store) do %>
+			Edit <i class="glyphicon glyphicon-edit"></i>
+		<% end %>
+	</p>
+
 </div>
