alignment for admin

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="container">
   <h1>Willow Bride Admin</h2>
   <ul class="list-group">
     <li class="list-group-item"><%= link_to 'View Stores', stores_path %></li>
