--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -233,7 +233,12 @@ a.city-title:hover {
 	font-size: $h1-font-size;
 }
 
-
+.pinit {
+	position: absolute;
+	top: 10px;
+	left: 0px;
+	width: 30px;
+}
 
 
 .mm-menu {
