--- a/app/views/nashville/designer.html.erb
+++ b/app/views/nashville/designer.html.erb
@@ -48,6 +48,7 @@
 						%>
 
 						<div class="dress_contain reveal">
+							<a data-pin-do="buttonBookmark" data-pin-custom="true" data-pin-tall="true" data-pin-round="true" data-pin-save="false" href="https://www.pinterest.com/pin/create/button/"><img src="http://www.willowbride.com/assets/pinit.png" height="25" class="pinit"/></a>
 							<%= image_tag(@dress_img, :alt => dress, :class => "dress-img") %>
 							<span class="dress_name"><%= @dress_name %></span>
 						</div>
@@ -73,6 +74,7 @@
 							%>
 
 							<div class="dress_contain reveal">
+								<a data-pin-do="buttonBookmark" data-pin-custom="true" data-pin-tall="true" data-pin-round="true" data-pin-save="false" href="https://www.pinterest.com/pin/create/button/"><img src="http://www.willowbride.com/assets/pinit.png" height="25" class="pinit"/></a>
 								<%= image_tag(@dress_img, :alt => dress, :class => "dress-img") %>
 								<span class="dress_name"><%= @dress_name %></span>
 							</div>
