--- a/app/views/dresses/index.html.erb
+++ b/app/views/dresses/index.html.erb
@@ -38,7 +38,7 @@
           <td><%= dress.collection %></td>
           <td><%= link_to 'Show', dress %></td>
           <td><%= link_to 'Edit', edit_dress_path(dress) %></td>
-          <td><%= link_to 'Destroy', dress, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Delete', dress, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </tbody>
