--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -31,7 +31,7 @@
           <td><%= designer.location3 %></td>
           <td><%= link_to 'Show', designer %></td>
           <td><%= link_to 'Edit', edit_designer_path(designer) %></td>
-          <td><%= link_to 'Destroy', designer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Delete', designer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </tbody>
