--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -18,7 +18,7 @@
           <td><%= store.name %></td>
           <td><%= link_to 'Show', store %></td>
           <td><%= link_to 'Edit', edit_store_path(store) %></td>
-          <td><%= link_to 'Destroy', store, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Delete', store, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </tbody>
