--- a/app/views/dresses/_form.html.erb
+++ b/app/views/dresses/_form.html.erb
@@ -70,8 +70,13 @@
       <%# f.label :collection %><br>
       <%# f.text_field :collection %>    
       <%= f.label :collection %><br>
-      <%= f.select :collection, options_for_select(Collection.where("designer_id": @dress.designer.id).all.collect {|s| [ s.collection ] } , {:selected => @dress.collection, prompt: 'Select Collection'}) %>
-      <%= link_to '+ Add New Collection', new_collection_path %>
+      <% if @dress.designer %>
+      <%= f.select :collection, options_for_select(Collection.where("designer_id": @ddid).all.collect {|s| [ s.collection ] } , {:selected => @dress.collection, prompt: 'Select Collection'}) %>
+      <% else %>
+      <%= f.select :collection, options_for_select(Collection.all.collect {|s| [ s.collection ] } , {:selected => @dress.collection, prompt: 'Select Collection'}) %>
+      <% end %>
+      <br />
+      <%= link_to '+ Add New Collection', new_collection_path, target: "_blank" %>
 
     </div>
   </fieldset>
