--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <% if params[:controller] != "welcome" %>
   <div class="page-container">
 <% end %>
-
+    <%= render 'layouts/messages' %>
 		<%= yield %>
 
 <% if params[:controller] != "welcome" %>
