--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -196,6 +196,11 @@ p {
 	animation: fadein 5s;
 }
 
+.home-img-container {
+	max-width: 350px;
+	margin: 0px auto;
+}
+
 .city-title {
 	text-transform: uppercase;
 	display: block;
