--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,15 +5,15 @@
 </div>
 
 <div class="row">
-	<div class="col-xs-12 col-sm-4 first">
+	<!-- <div class="col-xs-12 col-sm-4 first">
 		<div class="home-img-container">
-			<%= link_to image_tag("whitefish_home_hero.png", :border => 0, :alt => "Whitefish, Montana"), whitefish_path, :class => 'first' %>
+			<%#= link_to image_tag("whitefish_home_hero.png", :border => 0, :alt => "Whitefish, Montana"), whitefish_path, :class => 'first' %>
 		</div>
-		<%= link_to "Whitefish, Montana", whitefish_path, :class => 'city-title' %>
-		<%= link_to "Get Started", whitefish_path, :class => 'get-started' %>
+		<%#= link_to "Whitefish, Montana", whitefish_path, :class => 'city-title' %>
+		<%#= link_to "Get Started", whitefish_path, :class => 'get-started' %>
 
-	</div>
-	<div class="col-xs-12 col-sm-4 second">
+	</div> -->
+	<div class="col-xs-12 col-sm-4 col-sm-offset-2 second">
 		<div class="home-img-container">
 			<%= link_to image_tag("tupelo_home_hero.png", :border => 0, :alt => "Tupelo, Mississippi"), tupelo_path, :class => 'second' %>
 		</div>
