--- a/app/views/nashville/index.html.erb
+++ b/app/views/nashville/index.html.erb
@@ -29,19 +29,19 @@
 		<div class="col-xs-12">
 			<div class="col-xs-12">
 				<div class="col-xs-12 appointment-info">
-					<h3>All dresses are shown by appointment</h3>
-					<h3>Book today so we can introduce ourselves</h3>
+					<h3>Browsing hours are Tuesday and Thursday 10am &mdash; 2pm. </h3>
+					<h3>Please book an appointment for fittings Friday &mdash; Monday.</h3>
 					<a href="<%= @store.url %>" target="_blank"  class="btn">Book an appointment</a>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-xs-12">
-			<%= link_to(nashville_experience_path) do %>
+			<%#= link_to(nashville_experience_path) do %>
 				<div class="col-xs-12 col-sm-6 experience">
-					<%= image_tag(@store.the_experience_image, :alt => "Nashville, TN", :class => "location-img") %>
+					<%#= image_tag(@store.the_experience_image, :alt => "Nashville, TN", :class => "location-img") %>
 					<%# image_tag("nashville_experience.png", :alt => "Nashville, TN", :class => "location-img") %>
 					<div class="label-holder">
 						<h2>The Experience</h2>
@@ -50,11 +50,11 @@
 						</span>
 					</div>
 				</div>
-			<% end %>
+			<%# end %>
 
-			<%= link_to(nashville_explore_path) do %>
+			<%#= link_to(nashville_explore_path) do %>
 				<div class="col-xs-12 col-sm-6 dresses">
-					<%= image_tag(@store.gallery_image, :alt => "Nashville, TN", :class => "location-img") %>
+					<%#= image_tag(@store.gallery_image, :alt => "Nashville, TN", :class => "location-img") %>
 					<%# image_tag("nashville_gallery.png", :alt => "Nashville, TN", :class => "location-img") %>
 					<div class="label-holder">
 						<h2>Explore Dresses</h2>
@@ -63,9 +63,9 @@
 						</span>
 					</div>
 				</div>
-			<% end %>
+			<%# end %>
 		</div>
-	</div>
+	</div> -->
 
 </div>
 
