--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -15,7 +15,7 @@
   <fieldset class="form-group">
     <label for="designer_name" class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" name="designer[name]
+      <input type="text" class="form-control" name="designer[name]"
         id="designer_name" value="<%= @designer.name %>" />
     </div>
   </fieldset>
