add instagram feed to nashville

--- a/app/views/nashville/index.html.erb
+++ b/app/views/nashville/index.html.erb
@@ -37,7 +37,23 @@
 		</div>
 	</div>
 
+	<!-- INSTAGRAM -->
 	<!-- <div class="row">
+		<div class="col-xs-12">
+				<%# @insta.each do |insta| %>
+				  <div class="col-xs-6 col-sm-3">
+				    <div class="thumbnail">
+				      <a href="<%#= insta.link %>" target="_blank">
+				      	<%#= image_tag insta.images.thumbnail.url %>
+				      </a>
+				    </div>
+				  </div>
+				<%# end %>
+		</div>
+	</div> -->
+
+	<!-- <div class="row">
+
 		<div class="col-xs-12">
 			<%#= link_to(nashville_experience_path) do %>
 				<div class="col-xs-12 col-sm-6 experience">
