--- a/app/views/tupelo/explore.html.erb
+++ b/app/views/tupelo/explore.html.erb
@@ -4,13 +4,12 @@
 	
 	<%= render partial: "nav" %>
 
-	<div class="row no-bottom">
-		<h5 class="text-center text-uppercase text-muted">Designer dresses starting at $1000</h5>
-	</div>
 
 
 	<div class="row no-bottom">
 		<div class="col-xs-12 designers">
+			<h5 class="text-center text-uppercase designer">Designer dresses starting at $1000</h5>
+
 			<!-- <a href="http://www.daalarna.hu/" target="_blank" class="designer">Daalarna</a> 
 			<a href="http://www.jlmcouture.com" target="_blank" class="designer">Hayley Paige</a> 
 			<a href="http://www.jlmcouture.com" target="_blank" class="designer">Blush by Hayley Paige</a> 
