--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -33,7 +33,7 @@
     <div class="col-sm-4">
       <div class="input-group">
         <div class="input-group-addon">$</div>
-        <input type="text" class="form-control" name="designer[price]
+        <input type="text" class="form-control" name="designer[price]"
           id="designer_price" value="<%= @designer.price %>" >
       </div>
     </div>
@@ -41,23 +41,23 @@
 
  <% if false %>
   <fieldset class="form-group col-sm-4">
-    <label for="designer_location1 class="col-sm-2 control-label">Location 1</label>
+    <label for="designer_location1" class="col-sm-2 control-label">Location 1</label>
     <div class="col-sm-10">
-      <input type="select" class="form-control" name="designer[location1]
+      <input type="select" class="form-control" name="designer[location1]"
         id="designer_location1" value="<%= @designer.location1 %>" />
     </div>
   </fieldset>
   <fieldset class="form-group col-sm-4">
-    <label for="designer_location2 class="col-sm-2 control-label">Location 2</label>
+    <label for="designer_location2" class="col-sm-2 control-label">Location 2</label>
     <div class="col-sm-10">
-      <input type="text_area" class="form-control" name="designer[location2]
+      <input type="text_area" class="form-control" name="designer[location2]"
         id="designer_location2" value="<%= @designer.location2 %>" />
     </div>
   </fieldset>
   <fieldset class="form-group col-sm-4">
     <label for="designer_location3" class="col-sm-2 control-label">Location 3</label>
     <div class="col-sm-10">
-      <input type="text_area" class="form-control" name="designer[location3]
+      <input type="text_area" class="form-control" name="designer[location3]"
         id="designer_location3" value="<%= @designer.location3 %>" />
     </div>
   </fieldset>
@@ -118,11 +118,11 @@
       </div> -->
     <%# end %>
 
-    <p class="text-center">
-    <%= link_to new_dress_path(:designer_id => @designer.id), class: "btn btn-default" do %>
+    <!-- <p class="text-center">
+    <%#= link_to new_dress_path(:designer_id => @designer.id), class: "btn btn-default" do %>
         <i class="glyphicon glyphicon-plus"></i>&nbsp;Add New Dress
-    <% end %>
-    </p>
+    <%# end %>
+    </p> -->
   </div>
 
 
