--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -23,8 +23,7 @@
   <fieldset class="form-group">
     <label for="designer_description" class="col-sm-2 control-label">Description</label>
     <div class="col-sm-10">
-      <textarea class="form-control" name="designer[description]"
-        id="designer_description" cols="80" rows="2" value="<%= @designer.description %>"> </textarea>
+      <%= f.text_area :description, :class => 'wysihtml5' %>
     </div>
   </fieldset>
 
