--- a/app/views/nashville/index.html.erb
+++ b/app/views/nashville/index.html.erb
@@ -38,19 +38,19 @@
 	</div>
 
 	<!-- INSTAGRAM -->
-	<!-- <div class="row">
+	<div class="row">
 		<div class="col-xs-12">
-				<%# @insta.each do |insta| %>
+				<% @insta.each do |insta| %>
 				  <div class="col-xs-6 col-sm-3">
 				    <div class="thumbnail">
 				      <a href="<%#= insta.link %>" target="_blank">
-				      	<%#= image_tag insta.images.thumbnail.url %>
+				      	<%= image_tag insta.images.thumbnail.url %>
 				      </a>
 				    </div>
 				  </div>
-				<%# end %>
+				<% end %>
 		</div>
-	</div> -->
+	</div>
 
 	<!-- <div class="row">
 
